[gd_scene load_steps=6 format=3 uid="uid://qqxdkiohm6s"]

[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_n8hgt"]
[ext_resource type="Texture2D" uid="uid://bvymkf44mha1y" path="res://assets/tiles.png" id="2_piemq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2nfcs"]
atlas = ExtResource("2_piemq")
region = Rect2(584, 16, 16, 16)

[sub_resource type="LabelSettings" id="LabelSettings_2s4tu"]
font_size = 36
outline_size = 5
outline_color = Color(0, 0, 0, 1)
shadow_size = 10
shadow_color = Color(1, 0.498039, 0.439216, 0.25098)
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_lnixo"]
font_size = 24

[node name="UI" type="CanvasLayer" node_paths=PackedStringArray("life_icons") groups=["UIRoot"]]
script = ExtResource("1_n8hgt")
life_icons = [NodePath("HUD/MarginContainer/LifesContainer/TextureRect"), NodePath("HUD/MarginContainer/LifesContainer/TextureRect2"), NodePath("HUD/MarginContainer/LifesContainer/TextureRect3")]

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 180
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 180
theme_override_constants/margin_bottom = 8

[node name="ScoreContainer" type="HFlowContainer" parent="HUD/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="HUD/MarginContainer/ScoreContainer"]
layout_mode = 2
text = "SCORE : "

[node name="ScoreLabel" type="Label" parent="HUD/MarginContainer/ScoreContainer"]
layout_mode = 2
text = "0000"

[node name="HighScoreContainer2" type="HFlowContainer" parent="HUD/MarginContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
alignment = 1

[node name="Label" type="Label" parent="HUD/MarginContainer/HighScoreContainer2"]
layout_mode = 2
text = "HIGH SCORE : "

[node name="HighScoreLabel" type="Label" parent="HUD/MarginContainer/HighScoreContainer2"]
layout_mode = 2
text = "0000"

[node name="LifesContainer" type="HFlowContainer" parent="HUD/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="TextureRect" type="TextureRect" parent="HUD/MarginContainer/LifesContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_2nfcs")

[node name="TextureRect2" type="TextureRect" parent="HUD/MarginContainer/LifesContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_2nfcs")

[node name="TextureRect3" type="TextureRect" parent="HUD/MarginContainer/LifesContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_vertical = 4
texture = SubResource("AtlasTexture_2nfcs")

[node name="GameOverOverlay" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VFlowContainer" type="VFlowContainer" parent="GameOverOverlay"]
custom_minimum_size = Vector2(0, 135)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -40.0
offset_right = 125.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="GameOverOverlay/VFlowContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "GAME OVER"
label_settings = SubResource("LabelSettings_2s4tu")
horizontal_alignment = 1
uppercase = true

[node name="BoxContainer" type="BoxContainer" parent="GameOverOverlay/VFlowContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1
vertical = true

[node name="Label" type="Label" parent="GameOverOverlay/VFlowContainer/BoxContainer"]
layout_mode = 2
text = "Quer Tentar de novo?"
label_settings = SubResource("LabelSettings_lnixo")

[node name="HFlowContainer" type="HFlowContainer" parent="GameOverOverlay/VFlowContainer/BoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="Retry" type="Button" parent="GameOverOverlay/VFlowContainer/BoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Sim"
flat = true

[node name="Quit" type="Button" parent="GameOverOverlay/VFlowContainer/BoxContainer/HFlowContainer"]
layout_mode = 2
size_flags_horizontal = 10
theme_override_font_sizes/font_size = 24
text = "NÃ£o"
flat = true

[connection signal="pressed" from="GameOverOverlay/VFlowContainer/BoxContainer/HFlowContainer/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="GameOverOverlay/VFlowContainer/BoxContainer/HFlowContainer/Quit" to="." method="_on_quit_pressed"]
